--- a/MovieDirectorApp/Views/Genres/Index.cshtml
+++ b/MovieDirectorApp/Views/Genres/Index.cshtml
@@ -4,30 +4,25 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Genres</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Type)
-        </th>
-        <th></th>
-    </tr>
+
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
+    <div class="row">
+        <div class="well-lg">
             @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
+
             @Html.ActionLink("Edit", "Edit", new { id=item.GenreID }) |
             @Html.ActionLink("Details", "Details", new { id=item.GenreID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GenreID })
-        </td>
-    </tr>
+            @Html.ActionLink("Delete", "Delete", new { id=item.GenreID })<br />
+
+            
+        </div>
+    </div>
 }
 
-</table>
+
