--- a/MovieDirectorApp/Views/Movies/Index.cshtml
+++ b/MovieDirectorApp/Views/Movies/Index.cshtml
@@ -4,66 +4,36 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Movie Details</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Director.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Genre.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RTScore)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rating)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.WonAward)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Director.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReleaseDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RTScore)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.WonAward)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MovieID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MovieID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MovieID })
-        </td>
-    </tr>
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-6 col-med-4">
+            <div class="thumbnail">
+                <p>@Html.DisplayNameFor(model => model.Title) : @Html.DisplayFor(modelItem => item.Title)</p>
+
+                <p> Director : @Html.DisplayFor(modelItem => item.Director.Name)</p>
+
+                <p>@Html.DisplayNameFor(model => model.Genre.Type) : @Html.DisplayFor(modelItem => item.Genre.Type)</p>
+
+                <p>@Html.DisplayNameFor(model => model.ReleaseDate) : @Html.DisplayFor(modelItem => item.ReleaseDate)</p>
+
+                <p>@Html.DisplayNameFor(model => model.RTScore): @Html.DisplayFor(modelItem => item.RTScore)</p>
+
+                <p>@Html.DisplayNameFor(model => model.Rating) : @Html.DisplayFor(modelItem => item.Rating)</p>
+
+                <p>@Html.DisplayNameFor(model => model.WonAward) : @Html.DisplayFor(modelItem => item.WonAward)</p>
+
+                @Html.ActionLink("Edit", "Edit", new { id = item.MovieID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.MovieID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.MovieID })
+            </div>
+        </div>
+    
 }
-
-</table>
+</div>
