--- a/MovieDirectorApp/Views/Home/Index.cshtml
+++ b/MovieDirectorApp/Views/Home/Index.cshtml
@@ -9,21 +9,23 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+  <div class="thumbnail">
+    <div class="thumbnail">
         <h2>Movies</h2>
         <p>
             See a list.
         </p>
         <p><a class="btn btn-default" href="~/Movies/Index"> Movies &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="thumbnail">
         <h2>Directors</h2>
         <p>See a list of directors.</p>
         <p><a class="btn btn-default" href="~/Directors/Index">Directors &raquo;</a></p>
     </div>
-    <div class="col-md-4">
+    <div class="thumbnail">
         <h2>Genres</h2>
         <p>See a list of genres.</p>
         <p><a class="btn btn-default" href="~/Genres/Index">Genres &raquo;</a></p>
     </div>
+      </div>
 </div>
