--- a/MovieDirectorApp/Content/Site.css
+++ b/MovieDirectorApp/Content/Site.css
@@ -84,6 +84,7 @@ div.thumbnail {
     border-left-color: aqua;
     border-top-color: purple;
     border-width: 10px;
+    text-align: center;
 }
 
 
@@ -101,7 +102,7 @@ div.navbar {
 }
 
 a {
-    color: greenyellow;
+    color: midnightblue;
     font-size:x-large;
     font-family:Gigi;
         
@@ -139,3 +140,9 @@ dt{
     font-size: x-large;
     font-family:'Edwardian Script ITC';
 }
+
+div.panel{
+    text-align: center;
+    opacity: .5;
+}
+
