--- a/MovieDirectorApp/Views/Directors/Index.cshtml
+++ b/MovieDirectorApp/Views/Directors/Index.cshtml
@@ -9,25 +9,24 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table table-hover">
-    <tr>
-        <th>
+
+   
+        <div>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th></th>
-    </tr>
+        </div>
+
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
+    <div class="panel">
+      <p>@Html.DisplayFor(modelItem => item.Name)</p>
+
+        <div>
+            <br />
             @Html.ActionLink("Edit", "Edit", new { id=item.DirectorID }) |
             @Html.ActionLink("Details", "Details", new { id=item.DirectorID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.DirectorID })
-        </td>
-    </tr>
+            </div>
+        </div>
+
 }
 
-</table>
